package com.cafeteriamanagement.model.enums;

public enum IngredientType {
    CEREALS_AND_DERIVATIVES,
    TUBERS,
    VEGETABLES,
    FRUIT,
    DAIRY_PRODUCTS,
    MEAT,
    FISH,
    EGGS,
    LEGUMES,
    FATS_AND_OILS
}